# yesterdays_scoop_v2

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/db/: migrations.py
app/models/: __init__.py  models.py
app/services/: auth.py  backup_restore.py  bootstrap.py  clustering.py  ingestion.py  llm.py  meili.py  miniflux_client.py  ranking.py  retry.py  runtime_config.py  service_state.py  social_context.py  source_catalog.py  source_tiers.py  story_view.py  summarizer.py  text.py
app/tasks/: celery_app.py  jobs.py  pipeline.py
app/templates/: admin_dashboard.html  ai_config.html  backups.html  base.html  cluster_detail.html  home.html  login.html  search.html  settings.html  setup_complete.html  (+2 more)
deploy/: casaos-compose.yml  portainer-stack.yml
docs/: INSTALL.md  MIGRATION_NOTES.md  REFACTOR_PLAN.md
scripts/: install.sh  seed_demo_data.py  seed_sources.py
tests/: test_admin_dashboard.py  test_auth_redirects.py  test_auth_service.py  test_backup_restore.py  test_bootstrap.py  test_bootstrap_retry.py  test_clustering_behavior.py  test_fresh_install_smoke.py  test_health_endpoint.py  test_ingestion_flow.py  test_llm.py  test_llm_fallback.py  test_meili_service.py  test_miniflux_client.py  test_pipeline_history.py  test_pipeline_state.py  test_queue_dispatch.py  test_ranking.py  test_retry.py  test_settings_behavior.py  test_setup_wizard.py  test_source_catalog.py  test_startup_flow.py  test_story_view.py  test_summarizer_quality.py  test_text.py
(+16 files in other folders)
