[project]
name = "yesterdays-scoop"
version = "0.3.0"
description = "Yesterday's Scoop - integration-first self-hosted news intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "jinja2>=3.1.4",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.1",
  "httpx>=0.28.0",
  "python-slugify>=8.0.4",
  "celery[redis]>=5.4.0",
  "redis>=5.2.0",
  "openai>=1.58.1",
  "fastapi-login>=1.10.3",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100


[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "migrations*", "tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
